[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["full"] }
